stack/kubernetes/tools/istio/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: grafana-ingress
  namespace: istio-system
spec:
  ingressClassName: nginx
  rules:
    - host: "grafana.o11y.fans"
      http:
        paths:
          - backend:
              service:
                name: grafana
                port:
                  number: 3000
            path: /(.*)
            pathType: Prefix
