stack/kubernetes/tools/istio/kiali-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: kiali-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: "kiali.o11y.fans"
      http:
        paths:
          - backend:
              service:
                name: kiali
                port:
                  number: 20001
            path: /(.*)
            pathType: Prefix
  tls:
    - hosts:
        - "kiali.o11y.fans"
      secretName: kiali-tls-cert
