stack/kubernetes/tools/istio/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: prometheus-ingress
  namespace: istio-system
spec:
  ingressClassName: nginx
  rules:
    - host: "prometheus.o11y.fans"
      http:
        paths:
          - backend:
              service:
                name: prometheus
                port:
                  number: 9090
            path: /(.*)
            pathType: Prefix
