stack/kubernetes/tools/istio/tracing-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: jaeger-ingress
  namespace: istio-system
spec:
  kubernetes.io/ingress.class: nginx
  rules:
    - host: "jaeger.o11y.fans"
      http:
        paths:
          - backend:
              service:
                name: jaeger
                port:
                  number: 80
            path: /(.*)
            pathType: Prefix
