stack/kubernetes/tools/istio/zipkin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: zipkin-ingress
  namespace: istio-system
spec:
  rules:
    - host: "zipkin.o11y.tk"
      http:
        paths:
          - backend:
              service:
                name: zipkin
                port:
                  number: 9411
            path: /(.*)
            pathType: Prefix
